@@ -26,6 +26,7 @@ Changes from 0.6-0 to 0.7-0
 
 9.  Points (in particular, pch = 1) have more accurate radii. (Simon)
 
+10. Raster grobs can be drawn. (Simon)
 
 Changes from 0.5-10 to 0.6-0
 ============================
